--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,11 @@
 body {
-    background-color: bisque;
+    background-color: #A4B8C4;
     margin: 0; /* Reset default margin */
     overflow-x: hidden;
+}
+p {
+    color: #000000;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .nav {
@@ -10,7 +14,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #3333;
+    background-color: #4E6766;
     display: flex;
     flex-direction: column;
     transform: translateX(-350px);
@@ -28,7 +32,7 @@ body {
     justify-content: space-between;
     padding: 15px 25px;
     text-decoration: none;
-    color: #333;
+    color: #000000;
 }
 
 .nav-link:hover,
@@ -133,4 +137,8 @@ body {
         margin: 10px auto; /* Adjust margin for better spacing */
         
     }
+}
+
+.larger-text {
+    size: large;
 }
